# Carta

./: .gitignore  .mcp.json  .opencode.json  AGENTS.md  BUGS.md  CHANGELOG.md  CLAUDE.md  README.md  conftest.py  plugin.json  pyproject.toml  test-audit-report.json  test_output.txt
.carta/: config.yaml
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: publish.yml  release.yml  test.yml
.planning/: BACKLOG.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  colpali-implementation.md  v0.2-MILESTONE-AUDIT.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/debug/: embed-pipeline-concurrency-and-hang.md  knowledge-base.md
.planning/debug/resolved/: anchor-doc-homeless-doc-exemption.md  carta-search-and-changed-since-bugs.md  docs-pip-args-syntax-and-version-refs.md  hook-config-grep-parser-fragility.md  pipx-path-conflict-actionable-warning.md  pipx-silent-incomplete-venv.md  skill-cache-old-version-wins.md
.planning/phases/01-pipeline-reliability-mcp-foundation/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-CONTEXT.md  01-DISCUSSION-LOG.md  01-RESEARCH.md  01-VALIDATION.md  01-VERIFICATION.md
.planning/phases/02-mcp-tools/: 02-01-PLAN.md  (+8 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
carta/: __main__.py  cli.py  config.py  conftest.py  mupdf_util.py
carta/audit/: audit.py
carta/embed/: colpali.py  embed.py  induct.py  lifecycle.py  parse.py  pipeline.py  vision.py
carta/hook/: hook.py
carta/hooks/: carta-prompt-hook.sh  carta-stop-hook.sh
carta/install/: __init__.py  auto_fix.py  bootstrap.py  config.yaml.example  install.sh  preflight.py
carta/mcp/: server.py
carta/scanner/: scanner.py
carta/search/: __init__.py  graph.py  scoped.py
carta/tests/: test_bootstrap.py  test_cli.py  test_config.py  test_embed.py  test_embed_targeted.py  test_graph_walk.py  test_induct.py  test_lifecycle.py  test_mcp_server.py  test_mupdf_util.py  test_pipeline.py  test_progress.py  test_progress_bar.py  test_scoped.py  test_update.py  test_version.py  test_vision.py
carta/ui/: __init__.py  progress.py
carta/update/: checker.py  updater.py
carta/vision/: __init__.py  chunking.py  classifier.py  router.py
docs/: install.md
docs/testing/: AUDIT_TRACKER.md  README.md  install-test-guide.md
hooks/: carta-prompt-hook.sh  carta-stop-hook.sh  hooks.json
hooks/scripts/: carta-check-deps.sh  carta-prompt-hook.sh  carta-stop-hook.sh
install/: bootstrap.py  config.yaml.example  install.sh
install/tests/: test_bootstrap.py
skills/carta-init/: SKILL.md
skills/doc-audit/: SKILL.md
skills/doc-embed/: SKILL.md
skills/doc-search/: SKILL.md
(+113 files in other folders)
