[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "carta-cc"
dynamic = ["version"]
description = "Semantic memory sidecar for Claude Code projects"
requires-python = ">=3.10"
dependencies = [
    "PyYAML>=6.0",
    "qdrant-client>=1.7",
    "requests>=2.31",
    "pymupdf>=1.23",
    "mcp>=1.7.1",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]
visual = [
    # colpali-engine dropped: its PEFT-based loader is broken on transformers>=5.x
    # (KeyError: 'llava' in _MOE_TARGET_MODULE_MAPPING).
    # We use the native transformers ColPaliForRetrieval/ColQwen2ForRetrieval API
    # introduced in transformers 4.49, which needs no PEFT adapters.
    "torch>=2.0.0",
    "transformers>=4.49.0",
    "pillow>=10.0.0",
    "numpy>=1.24.0",
]

[project.scripts]
carta = "carta.cli:main"
carta-mcp = "carta.mcp.server:main"
carta-hook = "carta.hook.hook:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["carta*"]

[tool.setuptools.package-data]
"carta" = ["skills/*/SKILL.md"]

[tool.setuptools.dynamic]
version = {attr = "carta.__version__"}
